# field_of_dreams

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
deploy/: .env.example  Dockerfile  amqp.Dockerfile  api.Dockerfile  base.Dockerfile  bot.Dockerfile  dev.docker-compose.yml  docker-compose.yml  migrations.Dockerfile
src/field_of_dreams/application/common/: __init__.py  exception.py
src/field_of_dreams/application/handlers/: add_player.py  create_game.py  join_chat.py  start_game.py
src/field_of_dreams/application/protocols/: chat.py  game.py  player.py  user.py  word.py
src/field_of_dreams/application/protocols/gateways/: __init__.py  game.py  player.py  player_turn.py  user.py  word.py
src/field_of_dreams/application/protocols/views/: game.py
src/field_of_dreams/config/: alembic.ini  logging_config.ini  settings.py
src/field_of_dreams/core/common/: __init__.py  exception.py
src/field_of_dreams/core/entities/: admin.py  chat.py  game.py  player.py  user_stats.py  word.py
src/field_of_dreams/core/handlers/: add_player.py  admin_login.py  check_is_last.py  check_user_queue.py  create_admin.py  create_game.py  crud_word.py  finish_game.py  get_admin_by_email.py  get_chat_stats.py  get_current_player.py  get_user_stats.py  idle_turn.py  join_chat.py  letter_turn.py  start_game.py  word_turn.py
src/field_of_dreams/core/protocols/gateways/: __init__.py  admin.py  chat.py  game.py  player.py  user.py  (+2 more)
src/field_of_dreams/core/services/: hasher.py  score.py
src/field_of_dreams/domain/entities/: chat.py  game.py  player.py  player_turn.py  user.py  word.py
src/field_of_dreams/infrastructure/di/: __init__.py  container.py  factory.py
src/field_of_dreams/infrastructure/mediator/: __init__.py  factory.py  mediator.py
src/field_of_dreams/infrastructure/memory/: fake_uow.py
src/field_of_dreams/infrastructure/rabbitmq/: factory.py  tg_poller.py  tg_publisher.py
src/field_of_dreams/infrastructure/redis/: factory.py
src/field_of_dreams/infrastructure/sqlalchemy/: factories.py  mapping.py  uow.py
src/field_of_dreams/infrastructure/tgbot/: __init__.py  bot.py  factory.py  filters.py  handler.py  poller.py  protocols.py  states.py  timer.py  types.py
src/field_of_dreams/presentation/amqp/: main.py
src/field_of_dreams/presentation/api/: main.py
src/field_of_dreams/presentation/tgbot/: main.py
tests/application/: test_handlers.py
tests/fixtures/: __init__.py  memory.py
(+81 files in other folders)
