[tool.poetry]
name = "field_of_dreams"
version = "0.1.0"
description = ""
authors = ["neekrasov <neekrasov@gmail.com>"]
packages = [{include = "field_of_dreams", from = "src"}]

[tool.poetry.dependencies]
python = "3.11"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
asyncpg = "^0.27.0"
marshmallow = "^3.19.0"
di = {extras = ["anyio"], version = "^0.75.2"}
pydantic = "^1.10.5"
aiohttp = "^3.8.4"
aiohttp-apispec = "^2.2.3"
aiohttp-session = "2.9.0"
cryptography = "^39.0.2"
aio-pika = "^9.0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
flake8-print = "^5.0.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[tool.black]
line-length = 79

[tool.flake8]
exclude = ['.git','__pycache__', '.env', 'venv', 'migrations',]
max-line-length = 79
max-complexivity = 8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
